added storing checksums
